--- a/index.html
+++ b/index.html
@@ -698,6 +698,77 @@
         </section>
         <!--------- Section End ---------->
 
+        <!---------client Section START ---------->
+        <section class="client_section">
+            <div class="container">
+                <div class="client_wrapper">
+                    <div class="client_wrapper--header">
+                        <div class="sub_Header">
+                            <span></span>
+                            <h4>Testimonials</h4>
+                        </div>
+    
+                        <h2 class="main_header">
+                            What clients say about us
+                        </h2>
+                    </div>
+
+                    <div class="client__carousel owl-carousel">
+                        <div class="client__single--carousel">
+                            <img src="assets/img/review_icon.svg" alt="" class="review_img">
+                            <p>
+                                We will help you identify your target market, develop a marketing plan, and grow your customer base. We are committed to helping you succeed, and we will work with you every step of the way.
+                            </p>
+
+                            <div class="client__details">
+                                <div class="client__thumb">
+                                    <img src="assets/img/author.png" alt="">
+                                </div>
+                                <div class="client__address">
+                                    <p>Leslie Alexander</p>
+                                    <span>CEO at Specter</span>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="client__single--carousel">
+                            <img src="assets/img/review_icon.svg" alt="" class="review_img">
+                            <p>
+                                We will help you identify your target market, develop a marketing plan, and grow your customer base. We are committed to helping you succeed, and we will work with you every step of the way.
+                            </p>
+
+                            <div class="client__details">
+                                <div class="client__thumb">
+                                    <img src="assets/img/author.png" alt="">
+                                </div>
+                                <div class="client__address">
+                                    <p>Leslie Alexander</p>
+                                    <span>CEO at Specter</span>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="client__single--carousel">
+                            <img src="assets/img/review_icon.svg" alt="" class="review_img">
+                            <p>
+                                We will help you identify your target market, develop a marketing plan, and grow your customer base. We are committed to helping you succeed, and we will work with you every step of the way.
+                            </p>
+
+                            <div class="client__details">
+                                <div class="client__thumb">
+                                    <img src="assets/img/author.png" alt="">
+                                </div>
+                                <div class="client__address">
+                                    <p>Leslie Alexander</p>
+                                    <span>CEO at Specter</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!--------- Section End ---------->
 
         <!---------9. post Section START ---------->
         <section class="post_section">
@@ -717,7 +788,7 @@
                     <div class="col-lg-4 col-md-6 col-12">
                         <div class="post__wrapper">
                             <div class="post__wrapper--thumb">
-                                <img src="assets/img/team/t1.png" alt="">
+                                <img src="assets/img/post/p1.png" alt="">
                             </div>
                             <div class="post__wrapper--content">
 
@@ -743,7 +814,7 @@
                     <div class="col-lg-4 col-md-6 col-12">
                         <div class="post__wrapper">
                             <div class="post__wrapper--thumb">
-                                <img src="assets/img/team/t2.png" alt="">
+                                <img src="assets/img/post/p2.png" alt="">
                             </div>
                             <div class="post__wrapper--content">
 
@@ -770,7 +841,7 @@
                     <div class="col-lg-4 col-md-6 col-12">
                         <div class="post__wrapper">
                             <div class="post__wrapper--thumb">
-                                <img src="assets/img/team/t3.png" alt="">
+                                <img src="assets/img/post/p3.png" alt="">
                             </div>
                             <div class="post__wrapper--content">
 
@@ -829,15 +900,7 @@
         </section>
         <!--------- Section End ---------->
 
-        <!--------- Section START ---------->
-        <section class="">
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-12"></div>
-                </div>
-            </div>
-        </section>
-        <!--------- Section End ---------->
+        
     </main>
 
     <footer>
