--- a/index.html
+++ b/index.html
@@ -767,6 +767,17 @@
                     </div>
                 </div>
             </div>
+
+
+            <div class="vedeo_wrapper">
+                <div class="vedeo_thumb">
+                    <img src="assets/img/vedeo_thumb.png" alt="">
+                </div>
+                <a class="my-link vbox_item" data-vbtype="video" data-autoplay="true" data-maxwidth="800px" href="https://www.youtube.com/watch?v=OLIJtqtoU4s">
+                    <img src="assets/img/player.png" alt="">
+                </a>
+            </div>
+
         </section>
         <!--------- Section End ---------->
 
